# cat-lang

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  TODO  grammar.txt
api/: CMakeLists.txt  api_response.hpp  crow_all.h  main.cpp
include/: Expr.hpp  ExprVisitor.hpp  Instruction.hpp  Lexer.hpp  MIPSTranspiler.hpp  Parser.hpp  ast.hpp  cat.hpp  diagnostic.hpp  expr_visitor.hpp  forward.hpp  mmt.hpp  node_visitor.hpp  span.hpp  stmt_visitor.hpp
src/: CMakeLists.txt  Expr.cpp  Lexer.cpp  MIPSTranspiler.cpp  Parser.cpp  ast.cpp  cat.cpp  diagnostic.cpp  lexer.cpp  main.cpp  mips_transpiler.cpp  mmt.cpp  parser.cpp
static/: github.css  index.css  index.html  index.media.css  package-lock.json  package.json
static/src/: App.vue  main.js
static/src/components/: CatCodeBlock.vue  ForkMe.vue  PopupNotification.vue  TableOfContents.vue
static/src/views/: AboutView.vue  HomeView.vue
templates/: index.mustache
tui/: CMakeLists.txt
ui/: CMakeLists.txt  main.cpp
web/: CMakeLists.txt  crow_all.h  main.cpp
